Fix robotics @apex title wrap break

--- a/src/components/home/header/style.module.scss
+++ b/src/components/home/header/style.module.scss
@@ -8,19 +8,23 @@
   background-position: center;
   background-size: cover;
   color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  padding-top: 50px !important;
 }
 
 .title {
   font-family: "Ethnocentric";
   font-style: italic;
   font-weight: 700;
+  font-size: 2.5rem;
+}
+
+.title span {
+  display: inline-block;
 }
 
 .tagline {
   max-width: 50ch;
+  font-size: 1.3rem;
 }
 
 .indicator {
@@ -50,4 +54,14 @@
 .buttons a:hover {
   background-color: theme.$color-red !important;
   border-color: theme.$color-red !important;
+}
+
+@media (min-width: 996px) {
+  .title {
+    font-size: 3rem; // from Infima
+  }
+
+  .tagline {
+    font-size: 1.5rem;
+  }
 }
